--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -9,10 +9,10 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <agent.main.class>org.basti.MyAgent</agent.main.class>
+        <agent.main.class>bachelor.MyAgent</agent.main.class>
         <bytebuddy.version>1.14.18</bytebuddy.version> </properties>
 
     <dependencies>
