--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <packaging>pom</packaging> <name>root</name>
 
     <properties>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target>
+        <maven.compiler.source>20</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <bytebuddy.version>1.14.16</bytebuddy.version>
@@ -21,7 +21,7 @@
 
     <modules>
         <module>agent</module> <module>app</module>
-        <module>inst</module>
+<!--        <module>inst</module>-->
     </modules>
 
     <build>
