--- a/app/pom.xml
+++ b/app/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>org.basti</groupId>
-        <artifactId>root</artifactId>
+        <artifactId>dynamic-analyzer</artifactId>
         <version>0.1-SNAPSHOT</version>
     </parent>
 
