--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.basti</groupId>
-    <artifactId>root</artifactId> <version>0.1-SNAPSHOT</version>
+    <artifactId>dynamic-analyzer</artifactId> <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging> <name>root</name>
 
     <properties>
